--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">ProyectoMinTICCiclo4</string>
     <string name="element_text">element_text</string>
+    <string name="latitude_label">Latitud</string>
+    <string name="longitude_label">Longitud</string>
+    <string name="activity_label">Actividad</string>
     <string-array name="lista_cargo">
         <item>Vigilante</item>
         <item>Subgerente</item>
